<resources>
    <string name="app_title">Pick Movie</string>
    <string name="movies_list_title">Интересные фильмы</string>
    <string name="movie_details_title">Описание</string>
    <string name="share_to_friend_title">Поделиться с другом</string>
    <string name="thor_movie">Тор: Любовь и гром (2022)</string>
    <string name="youngman_movie">Молодой человек (2022)</string>
    <string name="minions_movie">Миньоны: Грювитация (2022)</string>
    <string name="doctor_strange_movie">Доктор Стрэндж: В мульти- вселенной безумия (2022)</string>
    <string name="paws_of_fury_movie">Пес-самурай и город кошек (2022)</string>

    <!--Описание фильмов-->
    <string name="thor_movie_details">Джейн Фостер берет на себя обязанности Бога-громовержца и становится обладательницей молота Мьёльнира</string>
    <string name="youngman_movie_details">Ваня Ревзин к своим 30 годам, несмотря на золотую медаль в школе и красный диплом МГУ, оказался на дне: жена ушла к КМС по боксу, с убогой работы в банке уволили, а до закрытия ипотеки за маленькую студию в человейнике — годы боли и страданий. В момент отчаяния Иван узнает, что его ушлый одноклассник-двоечник Коля стал преуспевающим бизнесменом и объявил конкурс для старшеклассников с многомиллионным призовым фондом. Ваня, который выглядит сильно моложе своих лет, и которому даже алкоголь продают только по паспорту, решается на аферу. Он сбривает бороду, подделывает документы и едет на соревнование с уверенностью, что жизненный опыт легко одолеет молодость</string>
    <string name="minions_movie_details">Миллион лет миньоны искали самого великого и ужасного предводителя, пока не встретили ЕГО. Знакомьтесь — Грю. Пусть он еще очень молод, но у него в планах по-настоящему гадкие дела, которые заставят планету содрогнуться</string>
    <string name="doctor_strange_movie_details">Доктор Стрэндж при помощи Вонга спасает от гигантского осьминога девушку-подростка по имени Америка Чавес, которая при сильном испуге может открывать порталы в параллельные вселенные. Пытаясь уберечь новую знакомую от злой силы, жаждущей заполучить её способность, Доктор вместе с Америкой пускается в путешествие по мультивселенной</string>
    <string name="paws_of_fury_movie_details">Хэнк — смелый пёс, мечтающий стать самураем, вот только в городе кошек его никто не воспринимает всерьёз. Но когда армия пушистых ниндзя угрожает стереть их городок с лица Земли, Хэнк становится единственной надеждой на спасение. Теперь с помощью мудрого учителя и верных друзей он должен в сжатые сроки овладеть навыками великого воина. Только так у него появится шанс победить в эпической битве с могущественным врагом, вооруженным от усов до хвоста</string>

    <string name="button_ok">OK</string>
    <string name="movie_name">Название фильма</string>
    <string name="movie_description">Описание фильма</string>
    <string name="no_comments">Нет комментариев</string>
</resources>
