<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--First Movie-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:visibility="visible"
            android:src="@drawable/thor"/>
        <TextView
            android:id="@+id/frr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:paddingHorizontal="8dp"
            android:textSize="26dp"
            android:text="@string/thor_movie"
            android:lines="2"
            android:visibility="visible"
            android:textAlignment="viewStart"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/thorDetailsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/movie_review_icon"
                android:drawablePadding="12dp"
                android:paddingHorizontal="2dp"
                android:textSize="20dp"
                android:visibility="visible"
                android:text="Детали  \u00B7 "/>
            <TextView
                android:id="@+id/thorCommentView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:paddingHorizontal="2dp"
                android:textSize="15dp"
                android:visibility="visible"
                android:textColor="@color/grey"
                android:text="Нет комментариев"/>
            <ImageView
                android:id="@+id/thorFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingVertical="2dp"
                android:paddingHorizontal="20dp"
                android:visibility="visible"
                android:src="@drawable/not_checked_favourite_icon"/>
            <ImageView
                android:id="@+id/thorShare"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:visibility="visible"
                android:src="@drawable/share_icon"/>
        </LinearLayout>

        <!--separator-->
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/separator"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"/>

        <!--Second Movie-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/youngman"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:paddingHorizontal="8dp"
            android:textSize="26dp"
            android:text="@string/youngman_movie"
            android:lines="2"
            android:textAlignment="viewStart"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/youngmanDetailsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/movie_review_icon"
                android:drawablePadding="12dp"
                android:paddingHorizontal="2dp"
                android:textSize="20dp"
                android:visibility="visible"
                android:text="Детали  \u00B7 "/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:paddingHorizontal="2dp"
                android:textSize="18dp"
                android:visibility="visible"
                android:text="комментарий"/>
            <ImageView
                android:id="@+id/youngmanFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingVertical="2dp"
                android:paddingHorizontal="20dp"
                android:visibility="visible"
                android:src="@drawable/not_checked_favourite_icon"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:visibility="visible"
                android:src="@drawable/share_icon"/>
        </LinearLayout>

        <!--separator-->
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/separator"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"/>

        <!--Third Movie-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/minions"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:paddingHorizontal="8dp"
            android:textSize="26dp"
            android:text="@string/minions_movie"
            android:lines="2"
            android:textAlignment="viewStart"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/minionsDetailsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/movie_review_icon"
                android:drawablePadding="12dp"
                android:paddingHorizontal="2dp"
                android:textSize="20dp"
                android:visibility="visible"
                android:text="Детали  \u00B7 "/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:paddingHorizontal="2dp"
                android:textSize="18dp"
                android:visibility="visible"
                android:text="комментарий"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingVertical="2dp"
                android:paddingHorizontal="20dp"
                android:visibility="visible"
                android:src="@drawable/not_checked_favourite_icon"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:visibility="visible"
                android:src="@drawable/share_icon"/>
        </LinearLayout>

        <!--separator-->
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/separator"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"/>

        <!--Fourth Movie-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/doctor_strange"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:paddingHorizontal="8dp"
            android:textSize="24dp"
            android:text="@string/doctor_strange_movie"
            android:lines="2"
            android:textAlignment="viewStart"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/doctorStrangeDetailsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/movie_review_icon"
                android:drawablePadding="12dp"
                android:paddingHorizontal="2dp"
                android:textSize="20dp"
                android:visibility="visible"
                android:text="Детали  \u00B7 "/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:paddingHorizontal="2dp"
                android:textSize="18dp"
                android:visibility="visible"
                android:text="комментарий"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingVertical="2dp"
                android:paddingHorizontal="20dp"
                android:visibility="visible"
                android:src="@drawable/not_checked_favourite_icon"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:visibility="visible"
                android:src="@drawable/share_icon"/>
        </LinearLayout>

        <!--separator-->
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/separator"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"/>

        <!--Fifth Movie-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/paws_of_fury"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:paddingHorizontal="8dp"
            android:textSize="26dp"
            android:text="@string/paws_of_fury_movie"
            android:lines="2"
            android:textAlignment="viewStart"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pawsOfFuryDetailsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/movie_review_icon"
                android:drawablePadding="12dp"
                android:paddingHorizontal="2dp"
                android:textSize="20dp"
                android:visibility="visible"
                android:text="Детали  \u00B7 "/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:paddingHorizontal="2dp"
                android:textSize="18dp"
                android:visibility="visible"
                android:text="комментарий"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingVertical="2dp"
                android:paddingHorizontal="20dp"
                android:visibility="visible"
                android:src="@drawable/not_checked_favourite_icon"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:visibility="visible"
                android:src="@drawable/share_icon"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
